--- a/vue_manage/pom.xml
+++ b/vue_manage/pom.xml
@@ -72,6 +72,17 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.7</version>
         </dependency>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
